add:フォルダの整理

--- a/paiza/C051.ipynb
+++ b/paiza/C051.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "source": [
     "import itertools\n",
     "from paiza_test import*\n",
@@ -25,26 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "source": [
     "a = input().split(' ')\n",
     "# a = [int(s) for s in a]\n",
     "print(a)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['2', '9', '3', '8']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "source": [
     "a.sort(reverse=True)\n",
     "# print(a)\n",
@@ -52,16 +44,7 @@
     "num2 = int(a[1] + a[3])\n",
     "print(num1 + num2)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['9', '8', '3', '2']\n",
-      "175\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -73,9 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "source": [
-    "# a,b,c,d = map(int,input().split(' '))\n",
     "a = input().split(' ')\n",
     "a"
    ],
@@ -88,19 +70,19 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "source": [
     "arr = []\n",
     "for v in itertools.permutations(a, 4):\n",
     "    a = list(v)\n",
-    "    print(a)\n",
+    "    # print(a)\n",
     "    first = f\"{a[0]}{a[1]}\"\n",
     "    second = f\"{a[2]}{a[3]}\"\n",
     "    \n",
@@ -113,30 +95,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['9', '8', '3', '2']\n",
-      "['9', '8', '2', '3']\n",
-      "['9', '3', '8', '2']\n",
-      "['9', '3', '2', '8']\n",
-      "['9', '2', '8', '3']\n",
-      "['9', '2', '3', '8']\n",
-      "['8', '9', '3', '2']\n",
-      "['8', '9', '2', '3']\n",
-      "['8', '3', '9', '2']\n",
-      "['8', '3', '2', '9']\n",
-      "['8', '2', '9', '3']\n",
-      "['8', '2', '3', '9']\n",
-      "['3', '9', '8', '2']\n",
-      "['3', '9', '2', '8']\n",
-      "['3', '8', '9', '2']\n",
-      "['3', '8', '2', '9']\n",
-      "['3', '2', '9', '8']\n",
-      "['3', '2', '8', '9']\n",
-      "['2', '9', '8', '3']\n",
-      "['2', '9', '3', '8']\n",
-      "['2', '8', '9', '3']\n",
-      "['2', '8', '3', '9']\n",
-      "['2', '3', '9', '8']\n",
-      "['2', '3', '8', '9']\n",
       "175\n"
      ]
     }
@@ -163,7 +121,7 @@
    "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "f7b02a277ea93dcc6f71c1ec15134212ee9fa248997ed16dbaeb85b4def7b4d2"
+   "hash": "f13631c8933df2c77a5f37b07a4eee384ff657868836bfcfaf302a40f637f675"
   }
  },
  "nbformat": 4,
