--- a/paiza/C050.ipynb
+++ b/paiza/C050.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "source": [
     "from paiza_test import*"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "source": [
     "input_text=\"\"\"1\n",
     "1 1500 2050\n",
@@ -24,52 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "source": [
-    "n=int(input())\n",
-    "n\n",
-    "# for i in range(n):\n",
-    "#     print(input())"
+    "n=int(input())"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "source": [
-    "a, b, c  = map(int, input().split())\n",
-    "print(a)\n",
-    "print(b)\n",
-    "print(c)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n",
-      "1500\n",
-      "2050\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "source": [
     "a = input().split(' ')\n",
     "print(a)\n",
@@ -101,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "source": [
     "def check(team, VS):\n",
     "    #   値打ち        予算  -  追加金額\n",
@@ -134,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "source": [
     "while VS == 1:\n",
     "    count_up(team_A)\n",
@@ -172,7 +136,7 @@
    "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "f7b02a277ea93dcc6f71c1ec15134212ee9fa248997ed16dbaeb85b4def7b4d2"
+   "hash": "f13631c8933df2c77a5f37b07a4eee384ff657868836bfcfaf302a40f637f675"
   }
  },
  "nbformat": 4,
