add:ネズミ小僧

--- a/paiza/B043:ねずみ小僧.ipynb
+++ b/paiza/B043:ねずみ小僧.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 829,
    "source": [
     "from paiza_test import*\n",
     "import pandas as pd"
@@ -12,13 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 830,
    "source": [
-    "input_text=\"\"\"6\n",
-    ".*.*.\n",
-    "*....\n",
-    ".*...\n",
-    ".*..*\n",
+    "input_text=\"\"\"9\n",
+    "7 5\n",
+    "3 4\n",
+    "**...\n",
+    "..*..\n",
+    ".....\n",
+    "....*\n",
+    "**.**\n",
+    "*...*\n",
+    ".....\n",
     "\"\"\"\n",
     "\n",
     "def_input(input_text)"
@@ -28,44 +33,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 831,
    "source": [
-    "def I(): return int(input())\n",
-    "N = I() \n",
-    "print(N)\n",
-    "S = [input() for _ in range(N)]\n",
-    "print(\"S\")\n",
-    "print(S)\n",
-    "T_S = list(zip(*S))\n",
-    "for x in T_S[::-1]:\n",
-    "    print(*x,sep='')"
+    "n=int(input())"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 832,
+   "source": [
+    "def mainas(num):\n",
+    "  return num -1 "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 833,
+   "source": [
+    "right = 0\n",
+    "left = 0\n",
+    "a = list(map(int, input().split(\" \")))\n",
+    "b = list(map(int, input().split(\" \")))\n",
+    "b1 = list(map(mainas, b))\n",
+    "line = []\n",
+    "for i in range(a[0]):\n",
+    "    line.append(list(input()))\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "・今いる家が庶民の家であれば、その家を富豪の家にする。その後、90 度 (自分から見て) 右に回転して正面に 1 マス分進む。\n",
+    "\n",
+    "・今いる家が富豪の家であれば、その家を庶民の家にする。その後、90 度 (自分から見て) 左に回転して正面に 1 マス分進む。"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 834,
+   "source": [
+    "# 座標の配列を渡したて文字列を取得\n",
+    "def position(arr,line):\n",
+    "  if arr[0] < 0 or arr[0] >= len(line) or arr[1] < 0 or arr[1] >= len(line[0]):\n",
+    "    return False\n",
+    "  else:\n",
+    "    return line[arr[0]][arr[1]]\n",
+    "\n",
+    "# 記号を置換\n",
+    "def change(arr,str):\n",
+    "  global line\n",
+    "  line[arr[0]][arr[1]] = str\n",
+    "  return line\n",
+    "\n",
+    "# 座標を左回転\n",
+    "def rotate_left(arr):\n",
+    "  global left\n",
+    "  left = left + 1\n",
+    "  T_S = list(zip(*arr))\n",
+    "  new_arr = []\n",
+    "  for x in T_S[::-1]:\n",
+    "      u = list(x)\n",
+    "      new_arr.append(u)\n",
+    "  return new_arr\n",
+    "\n",
+    "# 座標を右回転\n",
+    "def rotate_right(arr):\n",
+    "  global right\n",
+    "  right = right + 1\n",
+    "  new_arr = []\n",
+    "  for x in zip(*arr[::-1]):\n",
+    "    u = list(x)\n",
+    "    new_arr.append(u)\n",
+    "  return new_arr\n",
+    "  \n",
+    "def search(line,s):\n",
+    "  length = len(line)\n",
+    "  for key, i in enumerate(line):\n",
+    "    # print(key)\n",
+    "    # print(i)\n",
+    "    if f\"★{s}\" in i:\n",
+    "      return [key,i.index(f\"★{s}\")]\n",
+    "\n",
+    "# 移動\n",
+    "def move(where):\n",
+    "  global line,b1\n",
+    "  if where == \"右\":\n",
+    "    b1[1] = b1[1] + 1\n",
+    "    s = position(b1,line)\n",
+    "    if s:\n",
+    "      line = change(b1,f\"★{s}\")\n",
+    "      line = rotate_left(line)\n",
+    "  else:\n",
+    "    b1[1] = b1[1] - 1\n",
+    "    s = position(b1,line)\n",
+    "    if s:\n",
+    "      line = change(b1,f\"★{s}\")\n",
+    "      line = rotate_right(line)\n",
+    "\n",
+    "  return s"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 835,
+   "source": [
+    "\n",
+    "def start():\n",
+    "  global b1,line\n",
+    "  for _ in range(10):\n",
+    "    s = position(b1,line)\n",
+    "\n",
+    "    if s == \".\":\n",
+    "      change(b1,\"*\")\n",
+    "      s = move(\"右\")\n",
+    "      if s:\n",
+    "        b1 = search(line,s)\n",
+    "        line = change(b1,s)\n",
+    "\n",
+    "\n",
+    "    elif s == \"*\":\n",
+    "      change(b1,\".\")\n",
+    "      s = move(\"左\")\n",
+    "      if s:\n",
+    "        b1 = search(line,s)\n",
+    "        line = change(b1,s)\n",
+    "  \n",
+    "  return line\n",
+    "\n",
+    "end = start()\n",
+    "print(end)\n",
+    "last = [[right,\"右\"],[left,\"左\"]]\n",
+    "print(last)\n",
+    "w = min(last)\n",
+    "print(w)\n",
+    "aro = abs(last[0][0]-last[1][0])\n",
+    "print(aro)\n",
+    "if w == \"右\":\n",
+    "  for _ in range(aro):\n",
+    "    end = rotate_left(end)\n",
+    "else:\n",
+    "  for _ in range(aro):\n",
+    "    end = rotate_right(end)\n",
+    "\n",
+    "for m in end:\n",
+    "  print(m)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "6\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'repeat' referenced before assignment",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "File \u001b[0;32m~/Desktop/study-py/paiza/paiza_test.py:9\u001b[0m, in \u001b[0;36minput\u001b[0;34m(reset)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m reset:\u001b[38;5;28;01mdel\u001b[39;00m inp,input_text,repeat;\u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__next__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n",
-      "\u001b[0;31mStopIteration\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [539]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m N \u001b[38;5;241m=\u001b[39m I() \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(N)\n\u001b[0;32m----> 4\u001b[0m S \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28minput\u001b[39m() \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)]\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(S)\n",
-      "Input \u001b[0;32mIn [539]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m N \u001b[38;5;241m=\u001b[39m I() \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(N)\n\u001b[0;32m----> 4\u001b[0m S \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)]\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(S)\n",
-      "File \u001b[0;32m~/Desktop/study-py/paiza/paiza_test.py:11\u001b[0m, in \u001b[0;36minput\u001b[0;34m(reset)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\u001b[38;5;28;01mreturn\u001b[39;00m inp\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__next__\u001b[39m()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mrepeat\u001b[49m:inp\u001b[38;5;241m=\u001b[39mpreinput(input_text)\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m inp\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__next__\u001b[39m()\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'repeat' referenced before assignment"
+      "[['.', '.', '.', '.', '.'], ['*', '.', '.', '.', '*'], ['*', '*', '.', '*', '*'], ['.', '.', '.', '.', '.'], ['*', '*', '.', '.', '.'], ['.', '.', '*', '.', '.'], ['.', '.', '.', '*', '*']]\n",
+      "[[0, '右'], [2, '左']]\n",
+      "[0, '右']\n",
+      "2\n",
+      "['*', '*', '.', '.', '.']\n",
+      "['.', '.', '*', '.', '.']\n",
+      "['.', '.', '.', '*', '*']\n",
+      "['.', '.', '.', '.', '.']\n",
+      "['*', '*', '.', '*', '*']\n",
+      "['*', '.', '.', '.', '*']\n",
+      "['.', '.', '.', '.', '.']\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 836,
+   "source": [
+    "# **...\n",
+    "# ..*..\n",
+    "# ...**\n",
+    "# .....\n",
+    "# **.**\n",
+    "# *...*\n",
+    "# ....."
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
