--- a/paiza/B043:ねずみ小僧.ipynb
+++ b/paiza/B043:ねずみ小僧.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 829,
+   "execution_count": 1,
    "source": [
     "from paiza_test import*\n",
     "import pandas as pd"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 830,
+   "execution_count": 2,
    "source": [
     "input_text=\"\"\"9\n",
     "7 5\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 831,
+   "execution_count": 3,
    "source": [
     "n=int(input())"
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 832,
+   "execution_count": 4,
    "source": [
     "def mainas(num):\n",
     "  return num -1 "
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 833,
+   "execution_count": 5,
    "source": [
     "right = 0\n",
     "left = 0\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 834,
+   "execution_count": 6,
    "source": [
     "# 座標の配列を渡したて文字列を取得\n",
     "def position(arr,line):\n",
@@ -99,6 +99,7 @@
     "  T_S = list(zip(*arr))\n",
     "  new_arr = []\n",
     "  for x in T_S[::-1]:\n",
+    "    # print(x)\n",
     "      u = list(x)\n",
     "      new_arr.append(u)\n",
     "  return new_arr\n",
@@ -144,9 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 835,
+   "execution_count": 7,
    "source": [
-    "\n",
     "def start():\n",
     "  global b1,line\n",
     "  for _ in range(10):\n",
@@ -174,10 +174,11 @@
     "last = [[right,\"右\"],[left,\"左\"]]\n",
     "print(last)\n",
     "w = min(last)\n",
+    "print(\"w\")\n",
     "print(w)\n",
     "aro = abs(last[0][0]-last[1][0])\n",
     "print(aro)\n",
-    "if w == \"右\":\n",
+    "if w[1] == \"右\":\n",
     "  for _ in range(aro):\n",
     "    end = rotate_left(end)\n",
     "else:\n",
@@ -194,6 +195,7 @@
      "text": [
       "[['.', '.', '.', '.', '.'], ['*', '.', '.', '.', '*'], ['*', '*', '.', '*', '*'], ['.', '.', '.', '.', '.'], ['*', '*', '.', '.', '.'], ['.', '.', '*', '.', '.'], ['.', '.', '.', '*', '*']]\n",
       "[[0, '右'], [2, '左']]\n",
+      "w\n",
       "[0, '右']\n",
       "2\n",
       "['*', '*', '.', '.', '.']\n",
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 836,
+   "execution_count": 8,
    "source": [
     "# **...\n",
     "# ..*..\n",
