add:gaspreadの接続方法

--- a/paiza/未完成:C052:ゲームの画面.ipynb
+++ b/paiza/未完成:C052:ゲームの画面.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "source": [
     "from paiza_test import*"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "source": [
     "input_text=\"\"\"2\n",
     "100 80\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "source": [
     "n=int(input())"
    ],
@@ -34,14 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "source": [
     "a = input().split(' ')\n",
     "a = [int(s) for s in a]\n",
     "b = input().split(' ')\n",
     "b = [int(s) for s in b]\n",
     "print(a)\n",
-    "print(b)\n"
+    "print(b)\n",
+    "print((a[0] * b[0]) + (a[1] * abs(b[1])) - (b[0] * abs(b[1])))"
    ],
    "outputs": [
     {
@@ -49,7 +50,8 @@
      "name": "stdout",
      "text": [
       "[100, 80]\n",
-      "[95, -6]\n"
+      "[95, -6]\n",
+      "9410\n"
      ]
     }
    ],
