--- a/paiza/B026:自動販売機 再チャレンジ採点結果.ipynb
+++ b/paiza/B026:自動販売機 再チャレンジ採点結果.ipynb
@@ -318,6 +318,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1問しか合ってない"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -354,9 +361,9 @@
     "        cost_arr.append(cost)\n",
     "        skip = (res[1] - coin[1]) * 2 \n",
     "        \n",
-    "    # print(\"100えんから50えん\")\n",
-    "    # print(cost)\n",
-    "    # print(skip)\n",
+    "    print(\"100えんから50えん\")\n",
+    "    print(cost)\n",
+    "    print(skip)\n",
     "    \n",
     "    # 50えん\n",
     "    if skip == 0 and res[2] == 0 : cost_arr.append(0) \n",
@@ -370,9 +377,9 @@
     "        cost_arr.append(0)\n",
     "        skip = (res[2] + skip)  \n",
     "        \n",
-    "    # print(\"50えんから10えん\")\n",
-    "    # print(cost)\n",
-    "    # print(skip)\n",
+    "    print(\"50えんから10えん\")\n",
+    "    print(cost)\n",
+    "    print(skip)\n",
     "    # 10えん\n",
     "    if skip == 0 and res[3] == 0 : cost_arr.append(0) \n",
     "    elif coin[3] >= res[3] + skip :\n",
@@ -381,18 +388,151 @@
     "\n",
     "    elif coin[3] < (res[3] + skip) :\n",
     "        print(\"impossible\")\n",
-    "        break\n",
+    "        continue\n",
     "    # print(\" \".join(list(map(str,cost_arr))))\n",
     "    \n",
     "    add = np.array((df.iloc[i,1:]).to_list())\n",
     "    if (cost_arr[2] * 50) + (cost_arr[3] * 10) >= 100:\n",
     "        print(\"impossible\")\n",
-    "        break\n",
+    "        continue\n",
     "    print(\" \".join(list(map(str,cost_arr))))\n",
     "    coin = coin - cost_arr + add\n",
-    "    # print(coin)\n",
-    "    "
+    "    # print(coin)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 / 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "coin = np.array(list(map(int, input().split())))\n",
+    "# print(coin)\n",
+    "N = int(input())\n",
+    "line = [(input()) for _ in range(N)]\n",
+    "line = [list(map(int, i.rstrip().split(\" \"))) for i in line]\n",
+    "# print(line)\n",
+    "df = pd.DataFrame(line,columns=['value', 'c500', 'c100', 'c50','c10'])\n",
+    "# print(df)\n",
+    "# print(coin)\n",
+    "for i in range(N):\n",
+    "    \n",
+    "    お釣り = (df[\"c500\"][i]*500) + (df[\"c100\"][i]*100) + (df[\"c50\"][i]*50) + (df[\"c10\"][i]*10) - df[\"value\"][i]\n",
+    "    res = np.array(list(map(int,list(str(お釣り).zfill(4)))))\n",
+    "    # print(coin)\n",
+    "    # print(res)\n",
+    "    \n",
+    "    cost_arr = [0]\n",
+    "    cost = 0\n",
+    "    skip = 0\n",
+    "    # print(coin)\n",
+    "    # print(res)\n",
+    "    fix_list = [-1,-2,-3,-4,-5,-6,-7,-8,-9]\n",
+    "    test = coin - res\n",
+    "    # print(test)\n",
+    "    a = [i for i in test if i in fix_list]\n",
+    "    get_index = np.where(test == a)\n",
+    "    # print(get_index)\n",
+    "     \n",
+    "    def i100():\n",
+    "        if coin[1] == 0:\n",
+    "            test[1] = 0\n",
+    "            return res[1] * 2\n",
+    "        elif coin[1] >= res[1]:\n",
+    "            test[1] = coin[1]\n",
+    "            return (coin[1] - res[1]) * 2 \n",
+    "        elif coin[1] < res[1]:\n",
+    "            test[1] = coin[1]\n",
+    "            \n",
+    "            return (res[1] -coin[1]) *2\n",
+    "        else:\n",
+    "            test[1] = coin[1]\n",
+    "            return (res[1] - coin[1]) * 2\n",
+    "            \n",
+    "    # ここ\n",
+    "    def i50(skip):\n",
+    "        if coin[2] > 0 and res[2] + skip >= 5 :\n",
+    "            test[2] = coin[2] + skip - 1 \n",
+    "            return res[2] - 5\n",
+    "        else: \n",
+    "            test[2] = coin[2]\n",
+    "            return res[2] + skip * 5\n",
+    "        \n",
+    "    def i10(skip):\n",
+    "        test[3] =  coin[3] - skip\n",
+    "            \n",
+    "            \n",
+    "    if 1 in get_index:\n",
+    "        # print(\"100えんが危ない\")\n",
+    "        skip = i100()\n",
+    "        skip = i50(skip)\n",
+    "        # print(skip)\n",
+    "        i10(skip)\n",
+    "    elif 2 in get_index:\n",
+    "        # print(\"50えんが危ない\")\n",
+    "        skip = i50(skip)\n",
+    "        # print(skip)\n",
+    "        i10(skip)\n",
+    "    # elif 3 in get_index:\n",
+    "    #     # print(\"10えんが危ない\")\n",
+    "    # else:print(\"何\")\n",
+    "        \n",
+    "    # print(test)\n",
+    "\n",
+    "    # print(coin)\n",
+    "    # print(test)\n",
+    "    \n",
+    "    a = coin - test\n",
+    "    if (a[2] * 50) + (a[3] * 10) >= 100:\n",
+    "        print(\"impossible\")\n",
+    "        continue\n",
+    "    print(\" \".join(list(map(str,a))))\n",
+    "    \n",
+    " \n",
+    "        \n",
+    "    add = np.array(list(df.iloc[i,1:]))\n",
+    "    \n",
+    "    coin = test + add\n",
+    "    # print(coin)\n",
+    "    \n",
+    "    # print(\"ここまで\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
