--- a/paiza/B026:自動販売機 再チャレンジ採点結果.ipynb
+++ b/paiza/B026:自動販売機 再チャレンジ採点結果.ipynb
@@ -533,6 +533,125 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "あとランタイムエラー"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from paiza_test import*\n",
+    "input_text=\"\"\"5\n",
+    "0 10 10 3\n",
+    "3\n",
+    "200 0 2 0 0\n",
+    "160 1 0 0 0\n",
+    "170 1 0 0 0\n",
+    "\"\"\"\n",
+    "\n",
+    "def_input(input_text)\n",
+    "\n",
+    "n=int(input())\n",
+    "\n",
+    "input_list = list(map(int, input().split(\" \")))\n",
+    "# print(input_list)\n",
+    "N = int(input())\n",
+    "# print(N)\n",
+    "line = [list(map(int, input().split(\" \"))) for _ in range(N)]\n",
+    "# print(line)\n",
+    "\n",
+    "for i in line:\n",
+    "  value = i[0]\n",
+    "  投入コイン = i[1:]\n",
+    "  # print(投入コイン)\n",
+    "  # print(use)\n",
+    "  投入金額 = 投入コイン[0] * 500 + 投入コイン[1] * 100 + 投入コイン[2] * 50 + 投入コイン[3] * 10\n",
+    "  お釣り = 投入金額 - value\n",
+    "  お釣りコイン = list(map(int,list(str(お釣り).zfill(4))))\n",
+    "\n",
+    "  index_list = [0,1,2,3]\n",
+    "  new = []\n",
+    "  for index, cinput , coin in zip(index_list,input_list,お釣りコイン):\n",
+    "    if index == 2:\n",
+    "      fix_index = 2\n",
+    "      break\n",
+    "    noname = cinput - coin\n",
+    "    if noname >= 0:\n",
+    "      new.append(noname)\n",
+    "    else:\n",
+    "      fix_index = index\n",
+    "      break\n",
+    "  \n",
+    "  def i100():\n",
+    "    noname3 = input_list[1] - お釣りコイン[1]\n",
+    "    if input_list[1] == 0:\n",
+    "      return お釣りコイン[1]\n",
+    "    elif noname3 >= 0:\n",
+    "      new.append(noname3)\n",
+    "      return 0 \n",
+    "    elif noname3 < 0:\n",
+    "      new.append(0)\n",
+    "      return (お釣りコイン[1] - input_list[1]) * 2\n",
+    "    \n",
+    "    \n",
+    "  def i50(skip = 0):\n",
+    "    # 例\n",
+    "    if input_list[2] == 0 and skip >= 2:\n",
+    "      return \"False\"\n",
+    "    elif input_list[2] == 0 or お釣りコイン[2] + skip < 5:\n",
+    "      new.append(input_list[2])\n",
+    "      return お釣りコイン[2] + skip\n",
+    "    # 通常\n",
+    "    else:\n",
+    "      new.append(input_list[2] - 1)\n",
+    "      return お釣りコイン[2] + skip - 5\n",
+    "    \n",
+    "  def i10(skip):\n",
+    "    if skip == \"False\":\n",
+    "      print(\"impossible\")\n",
+    "      return False\n",
+    "    noname2 = input_list[3] - (お釣りコイン[3] + skip)\n",
+    "    if noname2 >= 0 and input_list[3] - noname2 < 10:\n",
+    "      new.append(noname2)\n",
+    "      return True\n",
+    "    else:\n",
+    "      print(\"impossible\")\n",
+    "      return False\n",
+    "      \n",
+    "  if fix_index == 1:\n",
+    "    skip = i100()\n",
+    "    if skip >= 2:\n",
+    "      print(\"impossible\")\n",
+    "      continue\n",
+    "    skip = i50(skip)\n",
+    "    a = i10(skip)\n",
+    "    \n",
+    "  elif fix_index == 2:\n",
+    "    skip = i50()\n",
+    "    a = i10(skip)\n",
+    "  \n",
+    "  elif fix_index == 3:\n",
+    "    a = i10(skip)\n",
+    "    \n",
+    "  if a:\n",
+    "    result = list(map(lambda x,y: x-y ,input_list,new))\n",
+    "    print(\" \".join(list(map(str,result))))\n",
+    "    input_list = list(map(lambda x,y: x+y ,投入コイン,new))"
+   ]
   }
  ],
  "metadata": {
